# ets2-chat-translator-main

./: CMakeLists.txt  LICENSE  README.md  build.bat  version.json
manager/: package-lock.json  package.json
manager/src/: index.html  main.js  preload.js  renderer.js  styles.css
src/: app_runtime.cpp  app_runtime.h  chat_panel.cpp  chat_panel.h  chat_tailer.cpp  chat_tailer.h  core_types.h  dllmain.cpp  settings_store.cpp  translate_engine.cpp  translate_engine.h
